# wheel_strategy

./: .env  .gitignore  pyproject.toml  wheel_version_5_scheduler.ipynb 22-00-56-363.ipynb
.claude/: settings.json
backtest/: 1_fully_functional.ipynb  OPTIONS_CHAIN_COMPRESSION.md  main.py  pyproject.toml  wheel_version_5_scheduler.ipynb
backtest/notebooks/: phase_1_get_dates.ipynb  phase_1_get_dates.py  phase_2_options_chain_data.ipynb  phase_all.ipynb  self.ipynb  wheel_version_1_one_stock_one_day.ipynb  wheel_version_2_realistic.ipynb  wheel_version_2_realistic.py  wheel_version_3_probabilistic_exits.ipynb  wheel_version_4_covered_call.ipynb  wheel_version_5_scheduler.ipynb
backtest/notebooks/archive/: index_tickers_data.ipynb  wheel_multi_symbol_backtest.ipynb  wheel_multi_symbol_backtest_v3.ipynb
live_trading/: .dockerignore  0_skeleton.ipynb  1_csp_strategy_phase1.ipynb  2_csp_paper_trading.ipynb  2_csp_strategy_phase2.ipynb  3_csp_strategy_phase3.ipynb  3_csp_strategy_phase3_refactored.ipynb  4_csp_strategy_slimmed.ipynb  5_covered_call_test.ipynb  6_refactor_validation.ipynb  Dockerfile  EXTRACTION_PLAN.md  _notebook_extracted.py  deploy-nissan.sh  deploy.sh  equity_screened_csp_bullish.json  extract_modules.py  portfolio_state.json  requirements.txt  screened_universe.json  strategy_metadata.json  testing.ipynb  wheel_positions_test.json
notebooks/: index_tickers_data.ipynb  phase_1_get_dates.ipynb  phase_1_get_dates.py  phase_2_options_chain_data.ipynb  self_copy.ipynb  wheel_multi_symbol_backtest.ipynb  wheel_multi_symbol_backtest_weekly.ipynb  (+8 more)
(+95 files in other folders)
