[project]
name = "wheel-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databento>=0.68.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
]
