[project]
name = "wheel-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databento>=0.68.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mibian>=0.1.3",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.3",
    "py-vollib>=1.0.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "pytickersymbols>=1.15.0",
    "pyyaml>=6.0.3",
    "yfinance>=1.0",
]
